[gd_scene load_steps=19 format=2]

[ext_resource path="res://Graphics/Environment/MountainBackground/grassy_mountains_fc.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Title.gd" type="Script" id=2]
[ext_resource path="res://Graphics/Environment/Clouds.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Fonts/MainFont.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Audio/Music/TitleMusic.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/SFX/MenuPositive.wav" type="AudioStream" id=9]
[ext_resource path="res://Audio/SFX/MenuNegative.wav" type="AudioStream" id=10]
[ext_resource path="res://Audio/SFX/MenuNavigationSound.wav" type="AudioStream" id=11]
[ext_resource path="res://Scenes/Menus/SubMenus/SaveSelect.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Menus/SubMenus/Options.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Menus/SubMenus/MenuOptions.tscn" type="PackedScene" id=18]
[ext_resource path="res://Graphics/Environment/MountainBackground/far_mountains_fc.png" type="Texture" id=19]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 4
outline_color = Color( 0.2, 0.2, 0.2, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("SaveSelect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("MenuOptions:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SaveSelect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SaveSelect:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -600, 315.578 ), Vector2( 70, 315.578 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("SaveSelect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Options:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MenuOptions:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 335.79, 523.158 ), Vector2( 335.79, 650 ) ]
}

[sub_resource type="Animation" id=6]
length = 30.0
step = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Clouds/Group_1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 30 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -500, -356.357 ), Vector2( 1500, -356.357 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/Clouds/Group_2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 4.897, 29.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -488.06, -355.517 ), Vector2( 1200, -355.517 ) ]
}

[node name="Title" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Node2D" parent="."]
position = Vector2( 488.06, 355.517 )
z_index = -3

[node name="Mountains" type="Node2D" parent="Background"]
modulate = Color( 0.768627, 0.768627, 0.768627, 1 )
position = Vector2( -141.682, 134.058 )
z_index = 1

[node name="Mountains1" type="TextureRect" parent="Background/Mountains"]
modulate = Color( 0.396078, 0.435294, 0.380392, 1 )
margin_left = -395.538
margin_top = -126.147
margin_right = 765.462
margin_bottom = 89.8528
texture = ExtResource( 19 )
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Mountains2" type="TextureRect" parent="Background/Mountains"]
modulate = Color( 0.501961, 0.533333, 0.4, 1 )
margin_left = -448.024
margin_top = -108.652
margin_right = 712.976
margin_bottom = 107.348
texture = ExtResource( 19 )
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Mountains3" type="TextureRect" parent="Background/Mountains"]
modulate = Color( 0.329412, 0.678431, 0.243137, 1 )
margin_left = -365.213
margin_top = -119.149
margin_right = 795.787
margin_bottom = 96.8509
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mountains4" type="TextureRect" parent="Background/Mountains"]
modulate = Color( 0.533333, 0.843137, 0.419608, 1 )
margin_left = -490.318
margin_top = -102.886
margin_right = 776.682
margin_bottom = 113.114
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkyBackground" type="ColorRect" parent="Background"]
margin_left = -486.0
margin_top = -357.0
margin_right = 534.0
margin_bottom = 241.0
color = Color( 0.486275, 0.298039, 0.184314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkyAccent" type="ColorRect" parent="Background"]
margin_left = -488.0
margin_top = -354.0
margin_right = 533.0
margin_bottom = 239.0
color = Color( 0.717647, 0.568627, 0.278431, 0.439216 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds" type="Node2D" parent="Background"]

[node name="Group_1" type="Node2D" parent="Background/Clouds"]
position = Vector2( -500, -356.357 )

[node name="Cloud_03" type="Sprite" parent="Background/Clouds/Group_1"]
position = Vector2( -36.9117, 197.007 )
scale = Vector2( 0.658766, 0.658766 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 245.63, 135.427, 305.352, 129.543 )

[node name="Cloud_04" type="Sprite" parent="Background/Clouds/Group_1"]
position = Vector2( -99.6119, 266.357 )
scale = Vector2( 0.658766, 0.658766 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( -9.75485, 152.083, 222.074, 129.543 )

[node name="Cloud_01" type="Sprite" parent="Background/Clouds/Group_1"]
position = Vector2( 111.289, 217.907 )
scale = Vector2( 0.658766, 0.658766 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( -55.1884, -11.7882, 351.617, 161.744 )

[node name="Cloud_02" type="Sprite" parent="Background/Clouds/Group_1"]
position = Vector2( 21.0385, 287.257 )
scale = Vector2( 0.658766, 0.658766 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 296.429, -34.6433, 223.277, 168.776 )

[node name="Cloud_05" type="Sprite" parent="Background/Clouds/Group_1"]
position = Vector2( -202.212, 289.157 )
scale = Vector2( 0.658766, 0.658766 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( -55.1884, -11.7882, 351.617, 161.744 )

[node name="Group_2" type="Node2D" parent="Background/Clouds"]
position = Vector2( -481.756, -355.517 )

[node name="Cloud_03" type="Sprite" parent="Background/Clouds/Group_2"]
position = Vector2( -325.43, 163.858 )
scale = Vector2( 0.658766, 0.658766 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 245.63, 135.427, 305.352, 129.543 )

[node name="Cloud_04" type="Sprite" parent="Background/Clouds/Group_2"]
position = Vector2( -388.13, 233.208 )
scale = Vector2( 0.658766, 0.658766 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( -9.75485, 152.083, 222.074, 129.543 )

[node name="Cloud_01" type="Sprite" parent="Background/Clouds/Group_2"]
position = Vector2( -177.229, 184.758 )
scale = Vector2( 0.658766, 0.658766 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( -55.1884, -11.7882, 351.617, 161.744 )

[node name="Cloud_02" type="Sprite" parent="Background/Clouds/Group_2"]
position = Vector2( -267.48, 254.108 )
scale = Vector2( 0.658766, 0.658766 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 296.429, -34.6433, 223.277, 168.776 )

[node name="Cloud_05" type="Sprite" parent="Background/Clouds/Group_2"]
position = Vector2( -490.73, 256.008 )
scale = Vector2( 0.658766, 0.658766 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( -55.1884, -11.7882, 351.617, 161.744 )

[node name="TitleLabel" type="Label" parent="."]
margin_left = 315.959
margin_top = 156.434
margin_right = 655.959
margin_bottom = 242.434
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Call of the Wild"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeTween" type="Tween" parent="."]

[node name="TimeCycleTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="TitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0
autoplay = true
bus = "Music"

[node name="MenuPositiveSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0
bus = "SFX"

[node name="MenuNegativeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0
bus = "SFX"

[node name="MenuNavigateSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -15.0
bus = "SFX"

[node name="UIAnim" type="AnimationPlayer" parent="."]
anims/Complete_Fade = SubResource( 2 )
anims/Main_to_Save = SubResource( 3 )
anims/Save_Fade = SubResource( 4 )
anims/Title_to_Options = SubResource( 5 )

[node name="TitleAnim" type="AnimationPlayer" parent="."]
autoplay = "TitleAnimation"
anims/TitleAnimation = SubResource( 6 )

[node name="MenuOptions" parent="." instance=ExtResource( 18 )]
margin_left = 335.79
margin_top = 523.158
margin_right = 335.79
margin_bottom = 523.158

[node name="SaveSelect" parent="." instance=ExtResource( 13 )]
margin_left = -600.0
margin_top = 315.578
margin_right = -47.0
margin_bottom = 557.578

[node name="Options" parent="." instance=ExtResource( 14 )]
margin_left = 248.0
margin_top = 218.0
margin_right = 248.0
margin_bottom = 218.0
rect_scale = Vector2( 1, 1e-05 )
[connection signal="timeout" from="TimeCycleTimer" to="." method="advance_time_cycle"]
[connection signal="optionspressed" from="MenuOptions" to="." method="setMenu" binds= [ 1 ]]
[connection signal="playPressed" from="MenuOptions" to="." method="setMenu" binds= [ 0 ]]
[connection signal="quitPressed" from="MenuOptions" to="." method="setMenu" binds= [ 4 ]]
[connection signal="back" from="SaveSelect" to="." method="setMenu" binds= [ 3 ]]
[connection signal="playSave" from="SaveSelect" to="." method="playSave"]
[connection signal="back" from="Options" to="." method="setMenu" binds= [ 2 ]]
